# TPHW_advancedProgCpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md
.circleci/: config.yml  congig.yml
.github/workflows/: please_do_some_fckng_magic.yml  task2.yml
project/include/: rderrors.h  rdlist.h  rdnetwork.h
project/lib/matfile/: CMakeLists.txt
project/lib/matfile/include/: parser.h
project/lib/matfile/src/: parser.c
project/lib/matfile/tests/: CMakeLists.txt
project/lib/matfile/tests/src/: parsertest.cpp
project/lib/parallel_sum/: CMakeLists.txt
project/lib/parallel_sum/include/: paral.h
project/lib/parallel_sum/src/: paral.c
project/lib/parallel_sum/tests/: CMakeLists.txt
project/lib/parallel_sum/tests/src/: paraltest.cpp
project/lib/sequential_sum/: CMakeLists.txt
project/lib/sequential_sum/include/: stat.h
project/lib/sequential_sum/src/: stat.c
project/lib/sequential_sum/tests/: CMakeLists.txt
project/lib/sequential_sum/tests/src/: stattest.cpp
project/src/: main.c  rdlist.c  rdnetwork.c
project/tst/: CMakeLists.txt  testaddntwrk.cpp  testcrush.cpp  testothertypes.cpp  tests.cpp
